tests/expectations/compiler/records/duplicate_var_fail.out
Error [ETYC0372018]: the name `owner` is defined multiple times in record `Token`
    --> compiler-test:6:9
     |
   5 |         owner: address,
     |         ^^^^^^^^^^^^^^ previous definition of the variable `owner` here
   6 |         owner: address, // Cannot define two record variables with the same name.
     |         ^^^^^^^^^^^^^^ `owner` redefined here
     |
     = record variables must have unique names
Error [ETYC0372018]: the name `owner` is defined multiple times in record `Asset`
    --> compiler-test:15:9
     |
  12 |         owner: address,
     |         ^^^^^^^^^^^^^^ previous definition of the variable `owner` here
     ...
  15 |         owner: address,
     |         ^^^^^^^^^^^^^^ `owner` redefined here
     |
     = record variables must have unique names
Error [ETYC0372018]: the name `owner` is defined multiple times in record `Data`
    --> compiler-test:22:9
     |
  20 |         owner: address,
     |         ^^^^^^^^^^^^^^ previous definition of the variable `owner` here
     ...
  22 |         owner: address,
     |         ^^^^^^^^^^^^^^ `owner` redefined here
     |
     = record variables must have unique names
Error [ETYC0372018]: the name `amount` is defined multiple times in record `Data`
    --> compiler-test:23:9
     |
  21 |         amount: u64,
     |         ^^^^^^^^^^^ previous definition of the variable `amount` here
     ...
  23 |         amount: u64,
     |         ^^^^^^^^^^^ `amount` redefined here
     |
     = record variables must have unique names
Error [ETYC0372085]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
